# flavorl

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
flavorl/: __init__.py  dataclasses.py  mealrec_data.py  preprocess_data.py  utils.py
flavorl/data/: data_utils.py  preprocess_data.py  zero_shot_classification.py
flavorl/data/generated_data/: course_classification.csv
flavorl/envs/: __init__.py  mealrec.py
mearl/: __init__.py
mearl/envs/: __init__.py  mealrec.py
mearl/wrappers/: __init__.py
