[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mearl"]

[project]
name = "mearl"
version = "0.0.1"
description = "RL environment for MealRec+ recommendations"
authors = [{ name = "Antonio Manjavacas" }, { name = "Andrea Morales"}]
readme = "README.md"
dependencies = ["gymnasium"]
