[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flavorl"]

[project]
name = "flavorl"
version = "0.0.1"
description = "RL environment for meal recommendations."
authors = [{ name = "Antonio Manjavacas" }, { name = "Andrea Morales"}]
readme = "README.md"
dependencies = ["gymnasium"]
